--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="divider_color">#e0e0e0</color>
     <color name="color_white">#FFFFFF</color>
-
+    <color name="color_blue">#3399ff</color>
 </resources>
