--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,8 @@
 
     <style name="Zhihu_light" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="windowActionBar">false</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="android:actionOverflowButtonStyle">@style/OverFlow</item>
         <!--<item name="android:windowActionBar">@color/theme_light_primary</item>-->
         <!--<item name="android:statusBarColor">@color/theme_light_primary_dark</item>-->
